<resources>
    <string name="app_name">Tech Week Schedule 2022</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main4">MainActivity4</string><!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="v_return">Return</string>
    <string name="v_day1">Monday</string>
    <string name="v_day2">Tuesday</string>
    <string name="v_day3">Wednesday</string>
    <string name="v_day4">Thursday</string>
    <string name="v_day5">Friday</string>
    <string name="v_time">Time</string>
    <string name="v_presenter">Presenter</string>
    <string name="v_description">Description</string>
    <string name="v_activityMode">Activity mode</string>
    <string name="v_learningActivity">Learning activity</string>
    <string name="v_language">Language</string>
    <string name="title_activity_manage">ManageActivity</string>
</resources>